[tool.poetry]
name = "bokeh-maps"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bokeh_maps"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
bokeh = "^3.0.3"
geopandas = "^0.12.2"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
